Implementation of basic statistics
